# Graduation-Project

./: .gitignore  README.md  app.py  classifier_logic.py  recommandation_system.py
Program/: .env.example  .gitignore  README.md  T1.txt  check_models.py  clear_db.py  get_ffmpeg.py  pyproject.toml  requirements.txt  reset_db.py  run.py  test_gemini.py
Program/examples/: sample_output.md
Program/outputs/: .gitkeep
Program/src/ai_modules/: README.md
Program/src/ai_modules/categorization/: README.md  categorizer.py
Program/src/ai_modules/recommendation/: README.md  recommender.py
Program/src/ai_modules/summarization/: README.md  note_generator.py  schemas.py  segmenter.py
Program/src/ai_modules/transcription/: README.md  audio_processor.py
Program/src/api/: analytics_routes.py  auth_routes.py  category_routes.py  main.py  notes_routes.py  recommendation_routes.py
Program/src/audio/: downloader.py
Program/src/auth/: __init__.py  dependencies.py  security.py
Program/src/db/: __init__.py  database.py  models.py
Program/src/services/: categorizer.py  recommender.py
Program/src/summarization/: note_generator.py
Program/src/transcription/: whisper_transcriber.py
Program/src/ui/: app.html
Program/src/utils/: config.py  logger.py
Program/temp/: .gitkeep
Program/tests/: test_pipeline.py
Text Summarization/: grad_1.ipynb
app/: Dockerfile  README.md  pubspec.yaml
app/lib/: constants.dart  main.dart  theme.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
(+18 files in other folders)
