[project]
name = "program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles==23.2.1",
    "asyncpg==0.31.0",
    "bcrypt==4.1.2",
    "email-validator>=2.3.0",
    "fastapi==0.109.0",
    "google-api-python-client==2.115.0",
    "google-genai>=1.2.0",
    "google-generativeai==0.3.2",
    "greenlet==3.3.1",
    "httpx==0.26.0",
    "langchain==0.1.0",
    "langchain-google-genai==0.0.5",
    "openai-whisper==20250625",
    "passlib[bcrypt]==1.7.4",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.1.0",
    "pydantic[email]==2.12.5",
    "pydub==0.25.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlmodel==0.0.14",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "uvicorn[standard]==0.27.0",
    "yt-dlp==2024.12.23",
]
